# zachs-bot

./: .gitignore  Cargo.toml  README.md  index.html  justfile  oranda.json
.github/workflows/: check.yml  deploy-discordbot.yml  deploy-fly-app.yml  release.yml  test.yml  web.yml
lib/core/: Cargo.toml  README.md
lib/core/src/: health_check.rs  lib.rs
scripts/: hello.rs
