[package]
name = "zachsbot"
description = "A library of re-usable functions for my bots"
version = "0.0.0-a"
edition = "2021"
license = "MIT"
repository = "https://github.com/sneakycrow/zachsbot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}