[package]
name = "zachsbot"
description = "A library of re-usable functions for my bots"
version = "0.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/sneakycrow/zachsbot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
hyper = "0.14.27"